--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "leaflet.markercluster": "^1.5.3",
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "vue-i18n": "^10.0.8"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.21",
