--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/leaflet-routing-machine": "^3.2.9",
     "@types/leaflet.markercluster": "^1.5.6",
     "@types/node": "^24.10.1",
+    "@vitejs/plugin-basic-ssl": "^2.1.3",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "autoprefixer": "^10.4.19",
